--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,12 @@
   "name": "sql_probe-ui",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3000/",
+  "proxy": {
+    "/": {
+      "target": "ws://localhost:3000/",
+      "ws": true
+    }
+  },
   "dependencies": {
     "chart.js": "^2.5.0",
     "react": "^15.5.4",
@@ -12,7 +17,7 @@
     "unfetch": "^2.1.2"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
